# ircjournal

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  shell.nix  sqlx-data.json  tsconfig.json  tslint.json
.github/: screenshot.sh
.github/workflows/: ci.yaml
ircj-serve/: .eslintrc.yaml  Cargo.toml  build.rs  package.json  tsconfig.json
ircj-serve/src/: db.rs  lib.rs  main.rs  route.rs  route_adapt.rs  route_static.rs  view.rs  watch.rs
ircj-serve/static/css/: ircjournal.sass
ircj-serve/static/js/: ircjournal.ts
ircj-watch/: Cargo.toml
ircj-watch/src/: lib.rs  main.rs
ircjournal/: Cargo.toml
ircjournal/migrations/: 20210915165747_initial.sql
ircjournal/src/: db.rs  lib.rs  model.rs  weechat.rs
migrations/20200613000000_init/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs  route.rs  route_adapt.rs  route_impl.rs  routes.rs  schema.rs  view.rs  views.rs  watch.rs  weechat.rs
static/css/: ircjournal.css.map  ircjournal.sass
static/js/: ircjournal.ts
