[package]
name = "ircjournal"
version = "0.1.0"
authors = ["Alexandre Macabies <web+oss@zopieux.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
#rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c028d63e5ba275927424397fe9d67cfebdc138ec", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
#rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "c028d63e5ba275927424397fe9d67cfebdc138ec", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
#maud = { version = "*", features = ["rocket"] }
maud = { git = "https://github.com/Zopieux/maud", branch = "support-rocket-0.5.0-rc.1", features = ["rocket"] }
figment = "0.10.5"
#dotenv = "0.15.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
inotify = "0.9"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread", "time", "io-util"] }
lazy_static = "1.4.0"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
crc32fast = "1.2"
linkify = "0.7"
markup = "0.12.2"
itertools = "0.10.1"

[dev-dependencies]
tempfile = "3.2"
